Add some stuff to the conference page

--- a/conference/001.html
+++ b/conference/001.html
@@ -2,4 +2,7 @@
 layout: conference
 conference-name: Builderscon::Tokyo
 ---
-blah blah blah
+
+<div>Your site will be available under <a href="#">tokyo.builderscon.io</a></div>
+
+<div
