--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: トップ
 <h2>カンファレンス</h2>
 
 <div class="collection">
-  <a href="./conference/001" class="collection-item">Builderscon::Tokyo</li>
-  <a href="./conference/002" class="collection-item">Builderscon::Osaka</li>
-  <a href="./conference/003" class="collection-item">Builderscon::Sapporo</li>
-</ul>
+  <a href="./conference/001" class="collection-item">Builderscon::Tokyo</a>
+  <a href="./conference/002" class="collection-item">Builderscon::Osaka</a>
+  <a href="./conference/003" class="collection-item">Builderscon::Sapporo</a>
+</div>
