Signup from SNSes

--- a/signup.html
+++ b/signup.html
@@ -5,6 +5,14 @@ title: Sign up
 ---
 <h2>Sign up</h2>
 
+<div class="collection">
+  <a href="#" class="collection-item">Facebook</a>
+  <a href="#" class="collection-item">Twitter</a>
+  <a href="#" class="collection-item">Github</a>
+</div>
+
+<p>TODO: サインアップは他のIDプロバイダーからのみで良いかと…</p>
+
 <div class="row">
   <form class="col s12">
     <div class="row">
